[build-system]
requires = ["setuptools>=61.2.0", "wheel", "setuptools_scm[toml]>=3.4.3", "kaitaiStructCompile[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "FrozenTable"
authors = [{name = "KOLANICH"}]
description = "a module to inspect and modify python bytecode hardcoded into a python interpreter"
keywords = ["python", "_bootstrap.py", "importlib", "bytecode", "marshal", "freeze", "frozen", "patch"]
license = {text = "Unlicense"}
classifiers = [
	"Programming Language :: Python",
	"Programming Language :: Python :: 3",
	"Development Status :: 4 - Beta",
	"Environment :: Other Environment",
	"Intended Audience :: Developers",
	"Intended Audience :: Information Technology",
	"License :: Public Domain",
	"Operating System :: OS Independent",
	"Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = ["kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git"]
dynamic = ["version"]

[project.readme]
file = "ReadMe.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://codeberg.org/KOLANICH-tools/FrozenTable.py"

[project.optional-dependencies]
pe = ["pefile @ git+https://github.com/erocarrera/pefile.git"]
elf = ["pyelftools @ git+https://github.com/eliben/pyelftools.git", "ELFMachine @ git+https://gitlab.com/KOLANICH/ELFMachine.py.git", "ELFRelocs @ git+https://gitlab.com/KOLANICH/ELFRelocs.py.git"]
macho = ["lief"]
cli = ["plumbum @ git+https://github.com/tomerfiliba/plumbum.git"]
decompilation = ["uncompyle6 @ git+https://github.com/rocky/python-uncompyle6.git"]

[tool.setuptools]
include-package-data = true
zip-safe = true
packages = ["FrozenTable"]

[tool.setuptools_scm]

[tool.kaitai]
outputDir = "FrozenTable"

[tool.kaitai.flags]
readStoresPos = true

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."cpython_frozen_table"]
update = true
localPath = "kaitai_struct_formats"

[tool.kaitai.repos."https://codeberg.org/KOLANICH/kaitai_struct_formats.git"."cpython_frozen_table".formats.cpython_frozen_table]
path = "database/cpython_frozen_table.ksy"
