[metadata]
name = FrozenTable
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/FrozenTable.py
description = a module to inspect and modify python bytecode hardcoded into a python interpreter
long_description = file: ReadMe.md
long_description_content_type = text/markdown
keywords = python, _bootstrap.py, importlib, bytecode, marshal, freeze, frozen, patch
license = Unlicense
license_file = UNLICENSE
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	Intended Audience :: Researchers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules

[options]
include_package_data = True
zip_safe = True
packages = FrozenTable
setup_requires = setuptools_scm; kaitaiStructCompile @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.py.git;
test_suite = tests.tests.Tests
install_requires =
	kaitaistruct @ git+https://github.com/kaitai-io/kaitai_struct_python_runtime.git

[options.extras_require]
PE = pefile @ git+https://github.com/erocarrera/pefile.git
ELF = pyelftools @ git+https://github.com/eliben/pyelftools.git; ELFMachine @ git+https://gitlab.com/KOLANICH/ELFMachine.py.git; ELFRelocs @ git+https://gitlab.com/KOLANICH/ELFRelocs.py.git
MachO = lief
CLI = plumbum @ git+https://github.com/tomerfiliba/plumbum.git
decompilation = uncompyle6 @ git+https://github.com/rocky/python-uncompyle6.git

[build-system]
requires = ["setuptools", "setuptools_scm", "wheel", "kaitaiStructCompile @ git+https://gitlab.com/KOLANICH/kaitaiStructCompile.py.git"]
